# aws-swiffer

./: README.md  install.sh  pyproject.toml
aws_swiffer/: main.py
aws_swiffer/command/: __init__.py  base.py  cloudfront.py  codebuild.py  codepipeline.py  dynamodb.py  ec2.py  ecr.py  ecs.py  iam.py  s3.py  vpc.py
aws_swiffer/factory/: BaseFactory.py  IFactory.py  __init__.py  helper.py
aws_swiffer/factory/cloudfront/: DistributionFactory.py
aws_swiffer/factory/codebuild/: ProjectFactory.py  __init__.py
aws_swiffer/factory/codepipeline/: CodepipelineFactory.py  __init__.py
aws_swiffer/factory/dynamodb/: TableFactory.py  __init__.py
aws_swiffer/factory/ec2/: InstanceFactory.py  __init__.py
aws_swiffer/factory/ecr/: EcrFactory.py  __init__.py
aws_swiffer/factory/ecs/: ClusterFactory.py  ServiceFactory.py  TaskDefinitionFactory.py  __init__.py
aws_swiffer/factory/iam/: GroupFactory.py  PolicyFactory.py  UserFactory.py  __init__.py
aws_swiffer/factory/s3/: BucketFactory.py
aws_swiffer/factory/vpc/: VPCFactory.py  __init__.py
aws_swiffer/resources/: IResource.py  __init__.py
aws_swiffer/resources/cloudfront/: Distribution.py
aws_swiffer/resources/codebuild/: Project.py
aws_swiffer/resources/codepipeline/: Codepipeline.py  __init__.py
aws_swiffer/resources/dynamodb/: Table.py
aws_swiffer/resources/ec2/: Instance.py  __init__.py
aws_swiffer/resources/ecr/: Ecr.py  __init__.py
aws_swiffer/resources/ecs/: Cluster.py  Service.py  __init__.py  (+1 more)
aws_swiffer/utils/: __init__.py  aws.py  callback.py  context.py  helper.py  input.py  logger.py
(+13 files in other folders)
