[tool.poetry]
name = "aws-swiffer"
version = "0.1.0"
description = "Clean your AWS account in easy and fast way"
authors = ["gabriele.previtera <gabriele.previtera@epsilonline.com>"]
readme = "README.md"
packages = [{include = "aws_swiffer"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34"
typer = {extras = ["all"], version = "^0.16.0"}
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aws-swiffer = "aws_swiffer.main:app"